feat: Add overflow scroll to result window

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
     width: 90%;
     height: 45%;
     font-family: "Digital-7", "Serif";
+    overflow: scroll;
 }
 
 .result, .operation {
@@ -44,6 +45,7 @@ body {
     padding-right: 2%;
     text-align: right;
     width: 94%;
+    overflow: scroll;
 }
 
 .result {
